# SOC_Analyst

./: .gitignore  Dockerfile  README.md  __init__.py  cli.py  client.py  environment.py  environment_comparison.py  environment_new.py  final_validation.py  inference.py  inference_new.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_graders.py  test_inference_comparison.py
server/: __init__.py  app.py
tasks/: __init__.py
tasks/easy/: __init__.py  grader.py
tasks/hard/: __init__.py  grader.py
tasks/medium/: __init__.py  grader.py
