[project]
name = "soc-incident-response"
version = "1.0.0"
description = "A real-world cybersecurity environment where an AI agent acts as a SOC analyst to triage, isolate, and mitigate an active server breach based on system logs."
authors = [{ name = "Purab Dansingani" }]
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
